# era_game

./: .clang-format  .gitignore  CMakeLists.txt  README.md  main.cpp
era_game_lib/: CMakeLists.txt
era_game_lib/include/: game_board.h  game_board_defs.h  game_board_view.h  game_manager.h  json_decoder.h  player_intf.h  terminal_player.h
era_game_lib/src/: game_board.cpp  game_manager.cpp  json_decoder.cpp  terminal_player.cpp
test/: CMakeLists.txt
test/src/: game_board_test.cpp  player_test.cpp
zadanie/: coding_standard.docx  era_game_requirements.rtf
